CHATS_SIT/force-app/main/default/objects/T_COUNTY_CNTC_INFO__c.object
<CustomObject>
    <description>County Contact Information</description>
    <fields>
        <fullName>ADR_EMAIL__c</fullName>
        <description>Email Address</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active flag</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_DESGN__c</fullName>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00679</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_COUNTY__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>County</description>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>County Contacts</relationshipLabel>
        <relationshipName>County</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_USER_CNTC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User</relationshipLabel>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST__c</fullName>
        <description>First Name</description>
        <label>First Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST__c</fullName>
        <description>Last Name</description>
        <label>Last Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_MI__c</fullName>
        <description>Middle Initial</description>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_FAX__c</fullName>
        <description>Fax Number</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE_EXT__c</fullName>
        <label>Phone Number Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE__c</fullName>
        <description>Phone Number</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>County Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Data_Load</fullName>
        <columns>NAME</columns>
        <columns>IDN_COUNTY__c</columns>
        <columns>NBR_FAX__c</columns>
        <columns>NBR_PHONE__c</columns>
        <columns>ADR_EMAIL__c</columns>
        <filterScope>Mine</filterScope>
        <label>Data Load</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Ext_len_mustbe_5</fullName>
        <active>true</active>
        <description>CHAT-2124: Extension must be 5 digit number</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_EXT__c)), 
OR(LEN(NBR_PHONE_EXT__c) &gt; 5, 
NOT(ISNUMBER(NBR_PHONE_EXT__c)) 
) 
)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE_EXT__c</errorDisplayField>
        <errorMessage>Please provide the 5-digit Phone Number Extension.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fax_Nbr_Len_MustBe_10</fullName>
        <active>true</active>
        <description>Fax Number must be 10 digit number</description>
        <errorConditionFormula>AND(NOT(ISBLANK(NBR_FAX__c)), 
OR(LEN(NBR_FAX__c) &lt;&gt; 10, 
NOT(ISNUMBER(NBR_FAX__c)) 
) 
)</errorConditionFormula>
        <errorDisplayField>NBR_FAX__c</errorDisplayField>
        <errorMessage>Please provide the 10-digit Fax Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phn_Nbr_Len_10</fullName>
        <active>true</active>
        <description>Validation to check Phone Number is of 10 digits</description>
        <errorConditionFormula>OR(  NOT(ISNUMBER( NBR_PHONE__c )) ,
    LEN( NBR_PHONE__c ) &lt;&gt; 10
)</errorConditionFormula>
        <errorDisplayField>NBR_PHONE__c</errorDisplayField>
        <errorMessage>Please provide the 10-digit Phone Number.</errorMessage>
    </validationRules>
</CustomObject>