CHATS_SIT/force-app/main/default/objects/T_COUNTY_CNTC_INFO__c/validationRules/Ext_len_mustbe_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Ext_len_mustbe_5</fullName>
    <active>true</active>
    <description>CHAT-2124: Extension must be 5 digit number</description>
    <errorConditionFormula>AND(NOT(ISBLANK(NBR_PHONE_EXT__c)), 
OR(LEN(NBR_PHONE_EXT__c) &gt; 5, 
NOT(ISNUMBER(NBR_PHONE_EXT__c)) 
) 
)</errorConditionFormula>
    <errorDisplayField>NBR_PHONE_EXT__c</errorDisplayField>
    <errorMessage>Please provide the 5-digit Phone Number Extension.</errorMessage>
</ValidationRule>