CHATS_SIT/force-app/main/default/objects/T_COUNTY_CNTC_INFO__c/validationRules/Fax_Nbr_Len_MustBe_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Fax_Nbr_Len_MustBe_10</fullName>
    <active>true</active>
    <description>Fax Number must be 10 digit number</description>
    <errorConditionFormula>AND(NOT(ISBLANK(NBR_FAX__c)), 
OR(LEN(NBR_FAX__c) &lt;&gt; 10, 
NOT(ISNUMBER(NBR_FAX__c)) 
) 
)</errorConditionFormula>
    <errorDisplayField>NBR_FAX__c</errorDisplayField>
    <errorMessage>Please provide the 10-digit Fax Number.</errorMessage>
</ValidationRule>