CHATS_SIT/force-app/main/default/objects/T_COUNTY_CNTC_INFO__c/validationRules/Phn_Nbr_Len_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Phn_Nbr_Len_10</fullName>
    <active>true</active>
    <description>Validation to check Phone Number is of 10 digits</description>
    <errorConditionFormula>OR(  NOT(ISNUMBER( NBR_PHONE__c )) ,
    LEN( NBR_PHONE__c ) &lt;&gt; 10
)</errorConditionFormula>
    <errorDisplayField>NBR_PHONE__c</errorDisplayField>
    <errorMessage>Please provide the 10-digit Phone Number.</errorMessage>
</ValidationRule>