CHATS_SIT/force-app/main/default/objects/T_COUNTY_CNTC_INFO__c/listViews/Data_Load.listView-meta.xml
<ListView>
    <fullName>Data_Load</fullName>
    <columns>NAME</columns>
    <columns>IDN_COUNTY__c</columns>
    <columns>NBR_FAX__c</columns>
    <columns>NBR_PHONE__c</columns>
    <columns>ADR_EMAIL__c</columns>
    <filterScope>Mine</filterScope>
    <label>Data Load</label>
</ListView>